--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -15,6 +15,7 @@ body {
   width: 80%;
   max-width: 1000px;
   margin: 0 auto;
+  text-align: center;
 }
 
 nav {
@@ -31,10 +32,13 @@ nav {
       color: $color-secondary;
     }
   }
-  h1 {
+  h1, a {
     color: $color-tertiary;
     text-transform: uppercase;
     margin: 0;
+    &:hover {
+    color: $color-secondary;
+    }
   }
 }
 
@@ -48,5 +52,82 @@ a {
   text-transform: uppercase;
   &:hover {
     color: $font-color-1;
+  }
+}
+
+.all-mugs {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  a {
+    font-size: 26px;
+    flex-basis: 20%;
+    border: 1px solid $color-primary;
+    margin: 10px;
+    padding: 20px;
+    text-align: center;
+    border-radius: 5px;
+    h3 {
+      margin: 5px;
+    }
+    img {
+      width: 100%;
+    }
+  }
+}
+
+ul {
+  padding-left: 0;
+  text-align: left;
+  li {
+    list-style: none;
+    margin: 5px 0;
+  }
+}
+
+.single-mug h3 {
+  font-size: 36px;
+  text-transform: uppercase;
+}
+
+.single-image {
+  width: 40%;
+  float: left;
+  margin-right: 10%;
+}
+
+#delete-form {
+  display: inline;
+}
+
+#delete-button {
+  color: $font-color-1;
+  font-size: 20px;
+  text-transform: uppercase;
+  border: 2px solid $font-color-1;
+  background-color: $color-tertiary;
+  display: inline;
+  cursor: pointer;
+  border-radius: 5px;
+  padding: 5px 10px;
+  &:hover {
+    background-color: $font-color-1;
+    color: $color-tertiary;
+  }
+}
+
+#edit-button {
+  color: $color-primary;
+  font-size: 20px;
+  text-transform: uppercase;
+  border: 2px solid $color-primary;
+  background-color: $color-tertiary;
+  display: inline;
+  cursor: pointer;
+  border-radius: 5px;
+  padding: 5px 10px;
+  &:hover {
+    background-color: $color-primary;
+    color: $color-tertiary;
   }
 }
