--- a/views/add.mustache
+++ b/views/add.mustache
@@ -10,7 +10,7 @@
 
     <nav>
       <a href="/"><i class="fa fa-coffee" aria-hidden="true"></i></a>
-      <h1>Mugs Central</h1>
+      <h1><a href="/">Mugs Central</a></h1>
       <a class="add-link" href="/add"><i class="fa fa-plus" aria-hidden="true"></i>
 </a>
     </nav>
@@ -21,6 +21,11 @@
         <div class="form-group">
           <label>Mug Name:</label><br />
           <input type="text" name="name" />
+        </div>
+        <div class="form-group">
+          <label>Image URL: </label><br />
+          <input type="text" name="imageURL" />
+          <p class="help-block">Help text here.</p>
         </div>
         <div class="form-group">
           <label>Color:</label><br />
