edit button is a button

--- a/views/show.mustache
+++ b/views/show.mustache
@@ -39,7 +39,7 @@
       <form id="delete-form" action="/delete/{{ _id }}?_method=DELETE" method="post">
         <button id="delete-button" type="submit" value="Delete Mug">Delete Mug</button>
       </form>
-      <a id="edit-button" href="/edit/{{ _id }}">Edit</a>
+      <a href="/edit/{{ _id }}"><button id="edit-button">Edit</button></a>
       <ul>
 
     </div>
