--- a/views/add.mustache
+++ b/views/add.mustache
@@ -69,7 +69,7 @@
           <label>Unique Characteristics (separate characteristics with semicolons)</label>
           <input type="text" name="uniqueCharacteristics" placeholder="Separate with semicolons" />
         </div>
-        <input type="submit" value="Create Mug" />
+        <input id="edit-button" type="submit" value="Create Mug" />
       </form>
     </div>
   </body>
