--- a/views/edit.mustache
+++ b/views/edit.mustache
@@ -10,9 +10,10 @@
 
     <nav>
       <a href="/"><i class="fa fa-coffee" aria-hidden="true"></i></a>
-      <h1>Mugs Central</h1>
+      <h1><a href="/">Mugs Central</a></h1>
       <a class="add-link" href="/add"><i class="fa fa-plus" aria-hidden="true"></i>
 </a>
+    </nav>
     </nav>
 
     <div class="container">
@@ -54,10 +55,10 @@
           </select>
         </div>
         <div class="form-group">
-          <label>Unique Characteristics (separate characteristics with semicolons)</label>
+          <label>Unique Characteristics (separate characteristics with semicolons)</label><br />
           <input type="text" name="uniqueCharacteristics" value="{{ characteristics }}" />
         </div>
-        <input type="submit" value="Create Mug" />
+        <input id="edit-button" type="submit" value="Update Mug" />
       </form>
 
 
